@@ -147,7 +147,6 @@ class FindPythonFilesTest(CoverageTest):
     def test_find_python_files(self):
         self.make_file("sub/a.py")
         self.make_file("sub/b.py")
-        self.make_file("sub/__init__.py")
         self.make_file("sub/x.c")                   # nope: not .py
         self.make_file("sub/ssub/__init__.py")
         self.make_file("sub/ssub/s.py")
@@ -155,7 +154,7 @@ class FindPythonFilesTest(CoverageTest):
         self.make_file("sub/lab/exp.py")            # nope: no __init__.py
         py_files = set(find_python_files("sub"))
         self.assert_same_files(py_files, [
-            "sub/__init__.py", "sub/a.py", "sub/b.py",
+            "sub/a.py", "sub/b.py",
             "sub/ssub/__init__.py", "sub/ssub/s.py",
             ])
 
